output/JavaParser.java
// $ANTLR 3.4 D:\\Compiler\\lap\\Resources\\Java.g 2018-04-24 13:31:47

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class JavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "Comparators", "DNumber", "ELSE", "For", "ID", "IF", "IMPORT", "IMPORTs", "Number", "PRINT", "Return", "ReturnType", "TYPE", "TrigFunc", "WS", "While", "'\"!\"'", "'\"'", "'('", "')'", "'*'", "'+'", "'++'", "'+='", "', '", "'-'", "'--'", "'-='", "'/'", "'; '", "';'", "'='", "'class'", "'{'", "'}'", "'}; '"
    };

    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int COMMENT=4;
    public static final int Comparators=5;
    public static final int DNumber=6;
    public static final int ELSE=7;
    public static final int For=8;
    public static final int ID=9;
    public static final int IF=10;
    public static final int IMPORT=11;
    public static final int IMPORTs=12;
    public static final int Number=13;
    public static final int PRINT=14;
    public static final int Return=15;
    public static final int ReturnType=16;
    public static final int TYPE=17;
    public static final int TrigFunc=18;
    public static final int WS=19;
    public static final int While=20;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public JavaParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public JavaParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return JavaParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Compiler\\lap\\Resources\\Java.g"; }



    // $ANTLR start "start"
    // D:\\Compiler\\lap\\Resources\\Java.g:32:1: start : prog ;
    public final void start() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:32:8: ( prog )
            // D:\\Compiler\\lap\\Resources\\Java.g:32:10: prog
            {
            pushFollow(FOLLOW_prog_in_start301);
            prog();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "start"



    // $ANTLR start "prog"
    // D:\\Compiler\\lap\\Resources\\Java.g:33:2: prog : ( declartion | ifelse | loops | assign | expr | class )+ ;
    public final void prog() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:34:6: ( ( declartion | ifelse | loops | assign | expr | class )+ )
            // D:\\Compiler\\lap\\Resources\\Java.g:34:8: ( declartion | ifelse | loops | assign | expr | class )+
            {
            // D:\\Compiler\\lap\\Resources\\Java.g:34:8: ( declartion | ifelse | loops | assign | expr | class )+
            int cnt1=0;
            loop1:
            do {
                int alt1=7;
                switch ( input.LA(1) ) {
                case TYPE:
                    {
                    alt1=1;
                    }
                    break;
                case IF:
                    {
                    alt1=2;
                    }
                    break;
                case For:
                case While:
                    {
                    alt1=3;
                    }
                    break;
                case ID:
                    {
                    int LA1_5 = input.LA(2);

                    if ( (LA1_5==36) ) {
                        alt1=4;
                    }
                    else if ( (LA1_5==EOF||LA1_5==DNumber||(LA1_5 >= For && LA1_5 <= IMPORT)||LA1_5==Number||(LA1_5 >= TYPE && LA1_5 <= TrigFunc)||LA1_5==While||LA1_5==23||(LA1_5 >= 25 && LA1_5 <= 26)||LA1_5==30||LA1_5==33||LA1_5==37) ) {
                        alt1=5;
                    }


                    }
                    break;
                case DNumber:
                case Number:
                case TrigFunc:
                case 23:
                    {
                    alt1=5;
                    }
                    break;
                case IMPORT:
                case 37:
                    {
                    alt1=6;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:34:9: declartion
            	    {
            	    pushFollow(FOLLOW_declartion_in_prog316);
            	    declartion();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:34:22: ifelse
            	    {
            	    pushFollow(FOLLOW_ifelse_in_prog320);
            	    ifelse();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:34:32: loops
            	    {
            	    pushFollow(FOLLOW_loops_in_prog325);
            	    loops();

            	    state._fsp--;


            	    }
            	    break;
            	case 4 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:34:40: assign
            	    {
            	    pushFollow(FOLLOW_assign_in_prog329);
            	    assign();

            	    state._fsp--;


            	    }
            	    break;
            	case 5 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:34:49: expr
            	    {
            	    pushFollow(FOLLOW_expr_in_prog333);
            	    expr();

            	    state._fsp--;


            	    }
            	    break;
            	case 6 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:34:57: class
            	    {
            	    pushFollow(FOLLOW_class_in_prog338);
            	    class();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "prog"



    // $ANTLR start "no"
    // D:\\Compiler\\lap\\Resources\\Java.g:36:2: no : ( Number | DNumber ) ;
    public final void no() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:36:6: ( ( Number | DNumber ) )
            // D:\\Compiler\\lap\\Resources\\Java.g:
            {
            if ( input.LA(1)==DNumber||input.LA(1)==Number ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "no"



    // $ANTLR start "declartion"
    // D:\\Compiler\\lap\\Resources\\Java.g:38:1: declartion : TYPE ID ( ', ' ID )* ( '=' ( expr )* )? ( ';' | '; ' ) ;
    public final void declartion() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:39:2: ( TYPE ID ( ', ' ID )* ( '=' ( expr )* )? ( ';' | '; ' ) )
            // D:\\Compiler\\lap\\Resources\\Java.g:39:4: TYPE ID ( ', ' ID )* ( '=' ( expr )* )? ( ';' | '; ' )
            {
            match(input,TYPE,FOLLOW_TYPE_in_declartion372); 

            match(input,ID,FOLLOW_ID_in_declartion374); 

            // D:\\Compiler\\lap\\Resources\\Java.g:39:12: ( ', ' ID )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==29) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:39:13: ', ' ID
            	    {
            	    match(input,29,FOLLOW_29_in_declartion377); 

            	    match(input,ID,FOLLOW_ID_in_declartion379); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // D:\\Compiler\\lap\\Resources\\Java.g:39:23: ( '=' ( expr )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==36) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // D:\\Compiler\\lap\\Resources\\Java.g:39:24: '=' ( expr )*
                    {
                    match(input,36,FOLLOW_36_in_declartion384); 

                    // D:\\Compiler\\lap\\Resources\\Java.g:39:28: ( expr )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==DNumber||LA3_0==ID||LA3_0==Number||LA3_0==TrigFunc||LA3_0==23) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:39:30: expr
                    	    {
                    	    pushFollow(FOLLOW_expr_in_declartion388);
                    	    expr();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }


            if ( (input.LA(1) >= 34 && input.LA(1) <= 35) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "declartion"



    // $ANTLR start "param"
    // D:\\Compiler\\lap\\Resources\\Java.g:40:1: param : TYPE ID ( ', ' ID )* ;
    public final void param() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:41:2: ( TYPE ID ( ', ' ID )* )
            // D:\\Compiler\\lap\\Resources\\Java.g:41:4: TYPE ID ( ', ' ID )*
            {
            match(input,TYPE,FOLLOW_TYPE_in_param410); 

            match(input,ID,FOLLOW_ID_in_param412); 

            // D:\\Compiler\\lap\\Resources\\Java.g:41:12: ( ', ' ID )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==29) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:41:13: ', ' ID
            	    {
            	    match(input,29,FOLLOW_29_in_param415); 

            	    match(input,ID,FOLLOW_ID_in_param417); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "param"



    // $ANTLR start "print"
    // D:\\Compiler\\lap\\Resources\\Java.g:42:1: print : PRINT ( ( ID | no | ( '\"' ID '\"' ) | '\"!\"' )* '; ' ) ;
    public final void print() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:42:8: ( PRINT ( ( ID | no | ( '\"' ID '\"' ) | '\"!\"' )* '; ' ) )
            // D:\\Compiler\\lap\\Resources\\Java.g:42:10: PRINT ( ( ID | no | ( '\"' ID '\"' ) | '\"!\"' )* '; ' )
            {
            match(input,PRINT,FOLLOW_PRINT_in_print428); 

            // D:\\Compiler\\lap\\Resources\\Java.g:42:17: ( ( ID | no | ( '\"' ID '\"' ) | '\"!\"' )* '; ' )
            // D:\\Compiler\\lap\\Resources\\Java.g:42:18: ( ID | no | ( '\"' ID '\"' ) | '\"!\"' )* '; '
            {
            // D:\\Compiler\\lap\\Resources\\Java.g:42:18: ( ID | no | ( '\"' ID '\"' ) | '\"!\"' )*
            loop6:
            do {
                int alt6=5;
                switch ( input.LA(1) ) {
                case ID:
                    {
                    alt6=1;
                    }
                    break;
                case DNumber:
                case Number:
                    {
                    alt6=2;
                    }
                    break;
                case 22:
                    {
                    alt6=3;
                    }
                    break;
                case 21:
                    {
                    alt6=4;
                    }
                    break;

                }

                switch (alt6) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:42:20: ID
            	    {
            	    match(input,ID,FOLLOW_ID_in_print434); 

            	    }
            	    break;
            	case 2 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:42:25: no
            	    {
            	    pushFollow(FOLLOW_no_in_print438);
            	    no();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:42:30: ( '\"' ID '\"' )
            	    {
            	    // D:\\Compiler\\lap\\Resources\\Java.g:42:30: ( '\"' ID '\"' )
            	    // D:\\Compiler\\lap\\Resources\\Java.g:42:31: '\"' ID '\"'
            	    {
            	    match(input,22,FOLLOW_22_in_print443); 

            	    match(input,ID,FOLLOW_ID_in_print445); 

            	    match(input,22,FOLLOW_22_in_print447); 

            	    }


            	    }
            	    break;
            	case 4 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:42:45: '\"!\"'
            	    {
            	    match(input,21,FOLLOW_21_in_print452); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,34,FOLLOW_34_in_print456); 

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "print"



    // $ANTLR start "assign"
    // D:\\Compiler\\lap\\Resources\\Java.g:43:1: assign : ID ( '=' ( expr )* ) ( ';' | '; ' ) ;
    public final void assign() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:43:9: ( ID ( '=' ( expr )* ) ( ';' | '; ' ) )
            // D:\\Compiler\\lap\\Resources\\Java.g:43:11: ID ( '=' ( expr )* ) ( ';' | '; ' )
            {
            match(input,ID,FOLLOW_ID_in_assign465); 

            // D:\\Compiler\\lap\\Resources\\Java.g:43:14: ( '=' ( expr )* )
            // D:\\Compiler\\lap\\Resources\\Java.g:43:15: '=' ( expr )*
            {
            match(input,36,FOLLOW_36_in_assign468); 

            // D:\\Compiler\\lap\\Resources\\Java.g:43:19: ( expr )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==DNumber||LA7_0==ID||LA7_0==Number||LA7_0==TrigFunc||LA7_0==23) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:43:21: expr
            	    {
            	    pushFollow(FOLLOW_expr_in_assign472);
            	    expr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }


            if ( (input.LA(1) >= 34 && input.LA(1) <= 35) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "assign"



    // $ANTLR start "return"
    // D:\\Compiler\\lap\\Resources\\Java.g:44:1: return : Return ID '; ' ;
    public final void return() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:44:9: ( Return ID '; ' )
            // D:\\Compiler\\lap\\Resources\\Java.g:44:11: Return ID '; '
            {
            match(input,Return,FOLLOW_Return_in_return491); 

            match(input,ID,FOLLOW_ID_in_return493); 

            match(input,34,FOLLOW_34_in_return495); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "return"



    // $ANTLR start "ifelse"
    // D:\\Compiler\\lap\\Resources\\Java.g:45:1: ifelse : IF '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment | print )* '}' ( else )? ;
    public final void ifelse() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:45:9: ( IF '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment | print )* '}' ( else )? )
            // D:\\Compiler\\lap\\Resources\\Java.g:45:11: IF '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment | print )* '}' ( else )?
            {
            match(input,IF,FOLLOW_IF_in_ifelse503); 

            match(input,23,FOLLOW_23_in_ifelse505); 

            pushFollow(FOLLOW_conition_in_ifelse507);
            conition();

            state._fsp--;


            match(input,24,FOLLOW_24_in_ifelse509); 

            match(input,38,FOLLOW_38_in_ifelse512); 

            // D:\\Compiler\\lap\\Resources\\Java.g:45:36: ( declartion | ifelse | loops | assign | increment | print )*
            loop8:
            do {
                int alt8=7;
                switch ( input.LA(1) ) {
                case TYPE:
                    {
                    alt8=1;
                    }
                    break;
                case IF:
                    {
                    alt8=2;
                    }
                    break;
                case For:
                case While:
                    {
                    alt8=3;
                    }
                    break;
                case ID:
                    {
                    int LA8_5 = input.LA(2);

                    if ( (LA8_5==36) ) {
                        alt8=4;
                    }
                    else if ( ((LA8_5 >= 27 && LA8_5 <= 28)||(LA8_5 >= 31 && LA8_5 <= 32)) ) {
                        alt8=5;
                    }


                    }
                    break;
                case PRINT:
                    {
                    alt8=6;
                    }
                    break;

                }

                switch (alt8) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:45:37: declartion
            	    {
            	    pushFollow(FOLLOW_declartion_in_ifelse515);
            	    declartion();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:45:50: ifelse
            	    {
            	    pushFollow(FOLLOW_ifelse_in_ifelse519);
            	    ifelse();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:45:60: loops
            	    {
            	    pushFollow(FOLLOW_loops_in_ifelse524);
            	    loops();

            	    state._fsp--;


            	    }
            	    break;
            	case 4 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:45:68: assign
            	    {
            	    pushFollow(FOLLOW_assign_in_ifelse528);
            	    assign();

            	    state._fsp--;


            	    }
            	    break;
            	case 5 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:45:77: increment
            	    {
            	    pushFollow(FOLLOW_increment_in_ifelse532);
            	    increment();

            	    state._fsp--;


            	    }
            	    break;
            	case 6 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:45:89: print
            	    {
            	    pushFollow(FOLLOW_print_in_ifelse536);
            	    print();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            match(input,39,FOLLOW_39_in_ifelse540); 

            // D:\\Compiler\\lap\\Resources\\Java.g:45:101: ( else )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ELSE) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // D:\\Compiler\\lap\\Resources\\Java.g:45:101: else
                    {
                    pushFollow(FOLLOW_else_in_ifelse542);
                    else();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "ifelse"



    // $ANTLR start "else"
    // D:\\Compiler\\lap\\Resources\\Java.g:46:1: else : ELSE '{' ( declartion | ifelse | loops | assign | increment )* '}' ;
    public final void else() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:46:7: ( ELSE '{' ( declartion | ifelse | loops | assign | increment )* '}' )
            // D:\\Compiler\\lap\\Resources\\Java.g:46:9: ELSE '{' ( declartion | ifelse | loops | assign | increment )* '}'
            {
            match(input,ELSE,FOLLOW_ELSE_in_else551); 

            match(input,38,FOLLOW_38_in_else554); 

            // D:\\Compiler\\lap\\Resources\\Java.g:46:19: ( declartion | ifelse | loops | assign | increment )*
            loop10:
            do {
                int alt10=6;
                switch ( input.LA(1) ) {
                case TYPE:
                    {
                    alt10=1;
                    }
                    break;
                case IF:
                    {
                    alt10=2;
                    }
                    break;
                case For:
                case While:
                    {
                    alt10=3;
                    }
                    break;
                case ID:
                    {
                    int LA10_5 = input.LA(2);

                    if ( (LA10_5==36) ) {
                        alt10=4;
                    }
                    else if ( ((LA10_5 >= 27 && LA10_5 <= 28)||(LA10_5 >= 31 && LA10_5 <= 32)) ) {
                        alt10=5;
                    }


                    }
                    break;

                }

                switch (alt10) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:46:20: declartion
            	    {
            	    pushFollow(FOLLOW_declartion_in_else557);
            	    declartion();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:46:33: ifelse
            	    {
            	    pushFollow(FOLLOW_ifelse_in_else561);
            	    ifelse();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:46:43: loops
            	    {
            	    pushFollow(FOLLOW_loops_in_else566);
            	    loops();

            	    state._fsp--;


            	    }
            	    break;
            	case 4 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:46:51: assign
            	    {
            	    pushFollow(FOLLOW_assign_in_else570);
            	    assign();

            	    state._fsp--;


            	    }
            	    break;
            	case 5 :
            	    // D:\\Compiler\\lap\\Resources\\Java.g:46:60: increment
            	    {
            	    pushFollow(FOLLOW_increment_in_else574);
            	    increment();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            match(input,39,FOLLOW_39_in_else578); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "else"



    // $ANTLR start "loops"
    // D:\\Compiler\\lap\\Resources\\Java.g:48:1: loops : ( ( For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}' ) | ( While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}' ) ) ;
    public final void loops() throws RecognitionException {
        try {
            // D:\\Compiler\\lap\\Resources\\Java.g:48:8: ( ( ( For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}' ) | ( While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}' ) ) )
            // D:\\Compiler\\lap\\Resources\\Java.g:48:10: ( ( For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}' ) | ( While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}' ) )
            {
            // D:\\Compiler\\lap\\Resources\\Java.g:48:10: ( ( For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}' ) | ( While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}' ) )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==For) ) {
                alt13=1;
            }
            else if ( (LA13_0==While) ) {
                alt13=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;

            }
            switch (alt13) {
                case 1 :
                    // D:\\Compiler\\lap\\Resources\\Java.g:48:11: ( For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}' )
                    {
                    // D:\\Compiler\\lap\\Resources\\Java.g:48:11: ( For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}' )
                    // D:\\Compiler\\lap\\Resources\\Java.g:48:12: For '(' declartion conition '; ' increment ')' '{' ( declartion | ifelse | loops | assign | increment | print )+ '}'
                    {
                    match(input,For,FOLLOW_For_in_loops589); 

                    match(input,23,FOLLOW_23_in_loops591); 

                    pushFollow(FOLLOW_declartion_in_loops593);
                    declartion();

                    state._fsp--;


                    pushFollow(FOLLOW_conition_in_loops596);
                    conition();

                    state._fsp--;


                    match(input,34,FOLLOW_34_in_loops599); 

                    pushFollow(FOLLOW_increment_in_loops601);
                    increment();

                    state._fsp--;


                    match(input,24,FOLLOW_24_in_loops603); 

                    match(input,38,FOLLOW_38_in_loops606); 

                    // D:\\Compiler\\lap\\Resources\\Java.g:48:66: ( declartion | ifelse | loops | assign | increment | print )+
                    int cnt11=0;
                    loop11:
                    do {
                        int alt11=7;
                        switch ( input.LA(1) ) {
                        case TYPE:
                            {
                            alt11=1;
                            }
                            break;
                        case IF:
                            {
                            alt11=2;
                            }
                            break;
                        case For:
                        case While:
                            {
                            alt11=3;
                            }
                            break;
                        case ID:
                            {
                            int LA11_5 = input.LA(2);

                            if ( (LA11_5==36) ) {
                                alt11=4;
                            }
                            else if ( ((LA11_5 >= 27 && LA11_5 <= 28)||(LA11_5 >= 31 && LA11_5 <= 32)) ) {
                                alt11=5;
                            }


                            }
                            break;
                        case PRINT:
                            {
                            alt11=6;
                            }
                            break;

                        }

                        switch (alt11) {
                    	case 1 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:48:67: declartion
                    	    {
                    	    pushFollow(FOLLOW_declartion_in_loops609);
                    	    declartion();

                    	    state._fsp--;


                    	    }
                    	    break;
                    	case 2 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:48:80: ifelse
                    	    {
                    	    pushFollow(FOLLOW_ifelse_in_loops613);
                    	    ifelse();

                    	    state._fsp--;


                    	    }
                    	    break;
                    	case 3 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:48:90: loops
                    	    {
                    	    pushFollow(FOLLOW_loops_in_loops618);
                    	    loops();

                    	    state._fsp--;


                    	    }
                    	    break;
                    	case 4 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:48:98: assign
                    	    {
                    	    pushFollow(FOLLOW_assign_in_loops622);
                    	    assign();

                    	    state._fsp--;


                    	    }
                    	    break;
                    	case 5 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:48:107: increment
                    	    {
                    	    pushFollow(FOLLOW_increment_in_loops626);
                    	    increment();

                    	    state._fsp--;


                    	    }
                    	    break;
                    	case 6 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:48:119: print
                    	    {
                    	    pushFollow(FOLLOW_print_in_loops630);
                    	    print();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt11 >= 1 ) break loop11;
                                EarlyExitException eee =
                                    new EarlyExitException(11, input);
                                throw eee;
                        }
                        cnt11++;
                    } while (true);


                    match(input,39,FOLLOW_39_in_loops634); 

                    }


                    }
                    break;
                case 2 :
                    // D:\\Compiler\\lap\\Resources\\Java.g:49:13: ( While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}' )
                    {
                    // D:\\Compiler\\lap\\Resources\\Java.g:49:13: ( While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}' )
                    // D:\\Compiler\\lap\\Resources\\Java.g:49:14: While '(' conition ')' '{' ( declartion | ifelse | loops | assign | increment )+ '}'
                    {
                    match(input,While,FOLLOW_While_in_loops651); 

                    match(input,23,FOLLOW_23_in_loops653); 

                    pushFollow(FOLLOW_conition_in_loops655);
                    conition();

                    state._fsp--;


                    match(input,24,FOLLOW_24_in_loops657); 

                    match(input,38,FOLLOW_38_in_loops659); 

                    // D:\\Compiler\\lap\\Resources\\Java.g:49:40: ( declartion | ifelse | loops | assign | increment )+
                    int cnt12=0;
                    loop12:
                    do {
                        int alt12=6;
                        switch ( input.LA(1) ) {
                        case TYPE:
                            {
                            alt12=1;
                            }
                            break;
                        case IF:
                            {
                            alt12=2;
                            }
                            break;
                        case For:
                        case While:
                            {
                            alt12=3;
                            }
                            break;
                        case ID:
                            {
                            int LA12_5 = input.LA(2);

                            if ( (LA12_5==36) ) {
                                alt12=4;
                            }
                            else if ( ((LA12_5 >= 27 && LA12_5 <= 28)||(LA12_5 >= 31 && LA12_5 <= 32)) ) {
                                alt12=5;
                            }


                            }
                            break;

                        }

                        switch (alt12) {
                    	case 1 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:49:41: declartion
                    	    {
                    	    pushFollow(FOLLOW_declartion_in_loops661);
                    	    declartion();

                    	    state._fsp--;


                    	    }
                    	    break;
                    	case 2 :
                    	    // D:\\Compiler\\lap\\Resources\\Java.g:49:54: ifelse
                    	    {
